lesson16/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kurlyk-svc
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
